--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,14 +16,8 @@
     </button>
   </div>
     <div class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1" id="mobile-menu-3">
-      <div>
-        <%= link_to edit_user_registration_path do %>
-          <% if current_user %>
-            <% if current_user.avatar.attached? %>
-              <%= image_tag current_user.avatar, class: 'rounded-full', style: 'width: 50px; height: 50px' %>
-            <% end %>
-          <% end %>
-        <% end %>
+      <div class="text-white">
+        <%= render 'shared/user_icon', user: current_user %>
       </div>
       <%= link_to "+ New picture", new_picture_path, class: 'text-white' %>
       <div class="relative mt-3 md:hidden">
