remove tailwind/intall bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html style="min-height: 100%; height: max-content;">
+<html style="min-height: 100vh; height: max-content;">
   <head>
     <title>SocialNetwork</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body style="min-height: 100%; height: max-content;">
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <body style="min-height: 100vh; height: max-content;">
+    <%= render 'shared/alert' %>
     <div style="min-height: 100vh; height: max-content;">
       <%= render 'shared/header' %>
       <div class="mt-2 mx-auto flex flex-col items-center">
         <%= yield %>
       </div>
+    </div>
     </div>
     <%= render 'shared/footer' %>
   </body>
