--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -2,7 +2,7 @@
   <div class="w-full">
     <div class="w-full pb-3 flex flex-col">
       <div class="px-2">
-        <%= render 'shared/user_icon', user: picture.user %>
+        <%= render 'users/user_icon', user: picture.user %>
       </div>
       <div class="w-full border-y-2 border-gray-100">
         <% if picture.photo.attached? %>
