style user_icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render 'shared/alert' %>
     <div style="min-height: 100vh; height: max-content;">
       <%= render 'shared/header' %>
-      <div class="mt-2 mx-auto flex flex-col items-center">
+      <div class="mt-2 mx-auto d-flex d-flex-column align-middle">
         <%= yield %>
       </div>
     </div>
