--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <div class="container-sm d-flex d-flex-columnumn justify-center align-middle">
+  <div class="container-sm d-flex flex-column justify-center align-middle">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
