--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,27 +1,33 @@
-<%= form_with(model: picture) do |form| %>
-  <% if picture.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
+<div class="container mt-4">
+  <div class="container-sm d-flex flex-column justify-center align-middle">
+    <%= form_with(model: picture) do |form| %>
+      <% if picture.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
 
-      <ul>
-        <% picture.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+          <ul>
+            <% picture.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <div>
-    <%= form.label :photo, style: "display: block" %>
-    <%= form.file_field :photo %>
+      <% unless action_name == "edit" %>
+        <div class="field form-group">
+          <%= form.label :photo, style: "display: block", class: "form-label" %>
+          <%= form.file_field :photo, class: "form-control" %>
+        </div>
+      <% end %>
+
+      <div class="field form-group">
+        <%= form.label :legend, style: "display: block", class: "form-label" %>
+        <%= form.text_area :legend, class: "form-control" %>
+      </div>
+
+      <div>
+        <%= form.submit "Update", class: "btn btn-primary w-100 mt-4" %>
+      </div>
+    <% end %>
   </div>
-
-  <div>
-    <%= form.label :legend, style: "display: block" %>
-    <%= form.text_area :legend %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
