--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,10 +1,8 @@
-<p style="color: green"><%= notice %></p>
-
 <%= render @picture %>
 
-<div>
-  <%= link_to "Edit this picture", edit_picture_path(@picture) %> |
+<div class="d-flex">
   <%= link_to "Back to pictures", pictures_path %>
+  <%= link_to "Edit legend", edit_picture_path(@picture), class: "btn btn-warning" %> |
 
-  <%= button_to "Destroy this picture", @picture, method: :delete %>
+  <%= button_to "Destroy this picture", @picture, method: :delete, class: "btn btn-danger" %>
 </div>
