--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,4 +1,8 @@
-<p style="color: green"><%= notice %></p>
+<%= content_for :head do %>
+  <style>
+    
+  </style>
+<% end %>
 
 <div class="mx-auto sm:max-w-lg container h-full my-2">
   <div id="pictures" class="h-full w-100 rounded-2 shadow border">
