--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,11 @@
       </div>
 
       <div class="field form-group">
+        <%= f.label :description, class: "form-label" %><br />
+        <%= f.text_field :description, class: "form-control" %>
+      </div>
+
+      <div class="field form-group">
         <%= f.label :email, class: "form-label" %><br />
         <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
       </div>
