--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,8 @@
   <%= link_to pictures_path, class: "no-decoration" do %>
     <h5 class="navbar-brand no-decoration">SocialNetwork</h5>
   <% end %>
+  <%= link_to '+ New picture', new_picture_path, class: "text-white no-decoration" %>
   <% if current_user %>
-    <%= render 'users/user_icon', user: current_user, name: false %>
+    <%= render 'users/user_preview', user: current_user, name: false %>
   <% end %>
 </nav>
