fix index picture height

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,6 +1,15 @@
 <%= content_for :head do %>
   <style>
-    
+  @media(max-width: 566px){
+    #pictures .photo{
+      height: 235px;
+    }
+  }
+  @media(min-width: 567px){
+    #pictures .photo{
+      height: 450px;
+    }
+  }
   </style>
 <% end %>
 
