add username to user

--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -13,7 +13,7 @@
       <% end %>
       <div class="px-2 pt-1">
         <%= link_to picture, class: "text-dark no-decoration" do %>
-          <strong><%= picture.user.name %></strong> <%= action_name == "index" ? "#{picture.legend[..40]} <b>see more...</b>".html_safe : picture.legend %>
+          <strong><%= picture.user.username %></strong> <%= action_name == "index" ? "#{picture.legend[..40]} <b>see more...</b>".html_safe : picture.legend %>
         <% end %>
       </div>
     </div>
