--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h4><%= "<-- #{@user.username}'s  Profile" %></h4>
   <div class="card">
     <div class="card-header">
       <%= render 'users/user_preview', user: @user, name: true %>
