--- a/app/views/users/_user_preview.html.erb
+++ b/app/views/users/_user_preview.html.erb
@@ -2,7 +2,7 @@
   <div class="d-flex px-2 py-3 justify-start align-items-center">
     <div>
       <% if user.avatar.attached? %>
-        <%= image_tag user.avatar, style: "width: 50px; height: 50px; border-radius: 100%;" %>
+        <%= image_tag user.show_avatar, style: "width: 50px; height: 50px; border-radius: 100%;" %>
       <% end %>
     </div>
     <div>
