--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,10 @@
 <div class="container mt-4">
   <div class="container-sm d-flex flex-column justify-center align-middle">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: "/users/edit/#{@user.id}", html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-
       <div class="field form-group mb-4">
         <%= f.label :name, class: "form-label" %><br />
-        <%= f.email_field :name, autofocus: true, autocomplete: "name",  class: "form-control" %>
+        <%= f.text_field :name, class: "form-control" %>
       </div>
 
       <div class="field form-group mb-4">
