--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="container-sm d-flex flex-column justify-center align-middle">
-    <%= form_for(resource, as: resource_name, url: "/users/edit/#{@user.id}", html: { method: :put }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
       <div class="field form-group mb-4">
         <%= f.label :name, class: "form-label" %><br />
@@ -46,7 +46,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Update", class: "btn btn-primary w-100" %>
+        <%= f.submit "Update", data: { disable_with: 'Updating...' } ,class: "btn btn-primary w-100" %>
       </div>
     <% end %>
 
