--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -2,7 +2,9 @@
 
 <div class="d-flex">
   <%= link_to "Back to pictures", pictures_path %>
-  <%= link_to "Edit legend", edit_picture_path(@picture), class: "btn btn-warning" %> |
+  <% if policy(@picture).edit? %>
+    <%= link_to "Edit legend", edit_picture_path(@picture), class: "btn btn-warning" %> |
 
-  <%= button_to "Destroy this picture", @picture, method: :delete, class: "btn btn-danger" %>
+    <%= button_to "Destroy this picture", @picture, method: :delete, class: "btn btn-danger" %>
+  <% end %>
 </div>
