--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -17,5 +17,10 @@
         <strong><%= picture.user.name %></strong> <%= action_name == "index" ? "#{picture.legend[..40]} <b>see more...</b>".html_safe : picture.legend %>
       <% end %>
     </div>
+    <div>
+      <div>
+        <i class="fa-solid fa-comment-dots"></i>
+      </div>
+    </div>
   </div>
 </div>
