--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -26,7 +26,7 @@
       </div>
 
       <div>
-        <%= form.submit "Update", class: "btn btn-primary w-100 mt-4" %>
+        <%= form.submit "Post", class: "btn btn-primary w-100 mt-4" %>
       </div>
     <% end %>
   </div>
