--- a/app/views/pictures/comments/_comment.html.erb
+++ b/app/views/pictures/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card my-2">
   <div class="card-header">
     <%= render 'users/user_preview', user: comment.user, name: true %>
   </div>
