--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -6,7 +6,9 @@
       <% if policy(@picture).edit? %>
         <%= link_to "Edit legend", edit_picture_path(@picture), class: "btn btn-warning" %> |
         
-        <%= button_to "Destroy this picture", @picture, method: :delete, class: "btn btn-danger" %>
+        <%= button_to @picture, method: :delete, class: "btn btn-danger" do %>
+          Delete <i class="fa fa-trash" aria-hidden="true"></i>
+        <% end %>
       <% end %>
     </div>
 
