--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,6 +1,13 @@
 <div id="<%= dom_id picture %>" class="card my-1 shadow">
   <div class="card-header">
-    <%= render 'users/user_preview', user: picture.user, name: true %>
+    <div>
+      <%= render 'users/user_preview', user: picture.user, name: true %>
+    </div>
+    <div class="d-flex justify-content-space-around">
+      <span class="text-secondary m-2">
+        published <%= time_ago_in_words(picture.created_at) %> ago
+      </span>
+    </div>
   </div>
   <div class="card-body p-0">
     <%= link_to picture do %>
