--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -26,6 +26,20 @@
     </div>
     <div>
       <div class="d-flex justify-start mt-4">
+          <% user_like = picture.likes.find_by(user_id: current_user.id) %>
+          <% if user_like && user_like.like %>
+            <%= link_to unlike_picture_path(picture), class: 'no-decoration d-flex flex-column text-center mx-2 text-dark' do %>
+              <h5><i class="fa-solid fa-heart text-danger"></i></h5>
+              <%= picture.likes.where(like: true).count %>
+            <% end %>
+          <% else %>
+            <%= link_to like_picture_path(picture), class: 'no-decoration d-flex flex-column text-center mx-2 text-dark' do %>
+              <h5><i class="fa-solid fa-heart text-secondary"></i></h5>
+              <%= picture.likes.where(like: true).count %>
+            <% end %>
+          <% end %>
+          <!-- likes count here -->
+          
         <%= link_to "#{picture_path(picture)}/#comments", class: 'no-decoration text-dark' do %>
           <div class="d-flex flex-column text-center">
             <h5><i class="fa-solid fa-comment-dots "></i></h5>
