--- a/app/views/users/_user_preview.html.erb
+++ b/app/views/users/_user_preview.html.erb
@@ -28,4 +28,11 @@
       </div>
     </div>
   <% end %>
+  <% if user.id != current_user.id %>
+    <% if current_user.followees.include?(user) %>
+      <%= button_to 'Unfollow', unfollow_user_path(user), method: :post %>
+    <% else %>
+      <%= button_to 'Follow', follow_user_path(user), method: :post %>
+    <% end %>
+  <% end %>
 </div>
