--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id picture %>" class="card my-1 shadow">
   <div class="card-header">
     <div>
-      <%= render 'users/user_preview', user: picture.user, name: true %>
+      <%= render 'users/user_preview', locals: { user: picture.user, name: true, username: true } %>
     </div>
     <div class="d-flex justify-content-space-around">
       <span class="text-secondary m-2">
