--- a/app/views/pictures/comments/_comment.html.erb
+++ b/app/views/pictures/comments/_comment.html.erb
@@ -2,7 +2,7 @@
   <div class="card-header">
     <div class="d-flex justify-content-between align-items-center">
       <div>
-        <%= render 'users/user_preview', user: comment.user, name: true %>
+        <%= render 'users/user_preview', locals: { user: comment.user, name: true, username: true } %>
       </div>
       <div class="d-flex justify-content-space-around">
         <span class="text-secondary m-2">
