fix:rename user description to status

--- a/app/views/users/_user_preview.html.erb
+++ b/app/views/users/_user_preview.html.erb
@@ -20,9 +20,9 @@
             <%= locals[:user].username %>
           </div>
         <% end %>
-        <% if locals[:description] %>
+        <% if locals[:status] %>
           <div class="mx-2 d-flex justify-center align-items-center text-secondary">
-            <%= locals[:user].description %>
+            <%= locals[:user].status %>
           </div>
         <% end %>
       </div>
