--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,8 +13,8 @@
       </div>
 
       <div class="field form-group">
-        <%= f.label :description, class: "form-label" %><br />
-        <%= f.text_field :description, class: "form-control" %>
+        <%= f.label :status, class: "form-label" %><br />
+        <%= f.text_field :status, class: "form-control" %>
       </div>
 
       <div class="field form-group mb-4">
