fix: fix little visual issues

--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id picture %>" class="card my-1 shadow">
-  <div class="card-header">
+  <div class="card-header p-1">
     <div>
       <%= render 'users/user_preview', locals: { user: picture.user, name: true, username: true, follows: true } %>
     </div>
