--- a/app/views/pictures/comments/_comment.html.erb
+++ b/app/views/pictures/comments/_comment.html.erb
@@ -5,9 +5,6 @@
         <%= render 'users/user_preview', locals: { user: comment.user, name: true, username: true, follows: false } %>
       </div>
       <div class="d-flex justify-content-space-around">
-        <span class="text-secondary m-2">
-          <%= time_ago_in_words(comment.created_at) %> ago
-        </span>
         <% if policy(comment).destroy? %>
           <div>
             <%= button_to [@picture, comment], method: :delete, class: "btn btn-danger" do %>
@@ -20,5 +17,10 @@
   </div>
   <div class="card-body">
     <p><%= comment.content %></p>
+  </div>
+  <div class="card-footer">
+    <span class="text-secondary my-2">
+      Commented <%= time_ago_in_words(comment.created_at) %> ago
+    </span>
   </div>
 </div>
