--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -35,9 +35,15 @@
       <div>
         <%= render 'users/user_preview', locals: { user: @user, name: true, status: true, follows: true } %>
         <% if (current_user && current_user.id == @user.id ) %>
-          <div>
-            <%= link_to edit_user_registration_path, class: 'btn btn-primary' do %>
-              Edit Profile <i class="fa fa-pencil-square text-white" aria-hidden="true"></i>
+          <div class="d-flex">
+            <%= link_to edit_user_registration_path, class: 'btn btn-primary mr-2' do %>
+              <i class="fa fa-pencil-square text-white" aria-hidden="true"></i>
+              Edit Profile
+            <% end %>
+
+            <%= button_to destroy_user_session_path, method: :delete, data: {turbo: false}, class: "btn btn-danger ml-1" do %>
+              <i class="fa fa-sign-out" aria-hidden="true"></i>
+              Sign out
             <% end %>
           </div>
         <% end %>
