--- a/app/views/users/_user_preview.html.erb
+++ b/app/views/users/_user_preview.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id locals[:user] %>" class="px-1 py-3 d-flex justify-content-between align-items-center">
+<div id="<%= dom_id locals[:user] %>" class="px-1 px-md-2 py-3 d-flex justify-content-between align-items-center">
   <%= link_to (user_path(locals[:user])), class: "no-decoration text-dark" do %>
     <div class="d-flex justify-start align-items-center">
       <div>
