--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
       <%= yield :head %>
     <% end %>
 
+    <%= render 'layouts/google_analytics' %>
+
     <style>
       .turbo-progress-bar{
         background: pink !important;
