--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
   <%= link_to pictures_path, class: "no-decoration" do %>
     <h5 class="navbar-brand no-decoration"><i class="fa-solid fa-globe"></i> Network</h5>
   <% end %>
-  <%= link_to new_picture_path, class: "text-white d-flex flex-column no-decoration" do %>
+  <%= link_to new_picture_path, class: "text-white d-flex flex-column no-decoration", style: 'transform: translateX(-50%)' do %>
     <i class="fa-solid fa-plus" style="font-size: 22px;"></i>
     <span style="font-size: 10px;">New Post</span>
   <% end %>
