fix destroy pictures

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <!-- Image and text -->
-<nav class="navbar navbar-dark px-1" style="background: var(--primary-color);">
+<nav class="navbar navbar-dark bg-dark px-1">
   <%= link_to pictures_path, class: "no-decoration" do %>
     <h5 class="navbar-brand no-decoration"><i class="fa-solid fa-globe"></i> Network</h5>
   <% end %>
