--- a/app/views/pictures/_picture.html.erb
+++ b/app/views/pictures/_picture.html.erb
@@ -9,7 +9,7 @@
       </span>
     </div>
     <% if current_user && current_user.has_role?(:admin) %>
-      <%= button_to @picture, method: :delete, class: "btn btn-danger" do %>
+      <%= button_to picture, method: :delete, class: "btn btn-danger" do %>
         Delete <i class="fa fa-trash" aria-hidden="true"></i>
       <% end %>
     <% end %>
