--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start mt-4 pt-3 text-light" style="background: var(--primary-color);">
+<footer class="bg-dark text-center text-lg-start mt-4 pt-3 text-light">
   <div class="d-flex flex-column text-center">
     <%= link_to 'Privacy policy', '#', class: 'text-light no-decoration' %>
     <%= link_to 'Terms & conditions', '#', class: 'text-light no-decoration' %>
