--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,10 @@
 <footer class="bg-dark text-center text-lg-start mt-4 pt-3 text-light">
   <div class="d-flex flex-column text-center">
-    <%= link_to 'Privacy policy', '#', class: 'text-light no-decoration' %>
-    <%= link_to 'Terms & conditions', '#', class: 'text-light no-decoration' %>
-    <%= link_to 'Support', '#', class: 'text-light no-decoration' %>
+    <%= link_to 'Privacy policy', privacy_policy_path, class: 'text-light no-decoration' %>
+    <div>
+      <i class="fa fa-envelope"></i>
+      <%= mail_to 'railsmails553@gmail.com', class: 'text-light no-decoration' %>
+    </div>
   </div>
   <!-- Copyright -->
   <div class="text-center bg-secondary mt-3">
